sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/Vendor_Invoice_Purchase_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice Purchase Order Line Item</label>
    <nameField>
        <displayFormat>VIPOLI-{0000000000}</displayFormat>
        <label>VI PO Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>