sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Item_Received_Total__c.field-meta.xml
<CustomField>
    <fullName>Item_Received_Total__c</fullName>
    <label>Item Received Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>