sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Item_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_Cost__c</fullName>
    <label>Reconciled Item Unit Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>