sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Item_Vat__c.field-meta.xml
<CustomField>
    <fullName>Item_Vat__c</fullName>
    <label>Reconciled Item Vat</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>