sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <label>PO Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>VIPO Line Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Purchase_Order_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>