sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/QHSECHECK__c.field-meta.xml
<CustomField>
    <fullName>QHSECHECK__c</fullName>
    <formula>IF(Purchase_Order_Line_Item__r.PTS_Line_Item__r.Item_Type__c = &#39;Stock&#39; , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QHSE?</label>
    <type>Checkbox</type>
</CustomField>