sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Reconciled_Item_Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Item_Quantity_Received__c</fullName>
    <label>Reconciled Item Quantity Received</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>