sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Reconciled_Line_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Line_Net_Cost__c</fullName>
    <description>Reconciled Net Cost per Line</description>
    <inlineHelpText>Reconciled Net Cost per Line</inlineHelpText>
    <label>Reconciled Line Net Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>