sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Reconciled_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Line_Total__c</fullName>
    <label>Reconciled Line Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>