sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/fields/Reconciled_Line_VAT__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Line_VAT__c</fullName>
    <description>Gross VAT amount for reconciled line</description>
    <inlineHelpText>Gross VAT amount for reconciled line</inlineHelpText>
    <label>Reconciled Line VAT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>