sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_Purchase_Order_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Invoice__c</columns>
    <columns>Purchase_Order_Line_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Quantity__c</columns>
    <columns>Item_Received_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>